--- a/gams/python/sarima_data.ipynb
+++ b/gams/python/sarima_data.ipynb
@@ -8,110 +8,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: pandas in c:\\users\\sebas\\documents\\clouddrive\\uni\\ws24\\research project\\gams\\python\\.wvenv\\lib\\site-packages (2.2.3)Note: you may need to restart the kernel to use updated packages.\n",
-      "\n",
-      "Requirement already satisfied: tzdata>=2022.7 in c:\\users\\sebas\\documents\\clouddrive\\uni\\ws24\\research project\\gams\\python\\.wvenv\\lib\\site-packages (from pandas) (2024.2)\n",
-      "Requirement already satisfied: pytz>=2020.1 in c:\\users\\sebas\\documents\\clouddrive\\uni\\ws24\\research project\\gams\\python\\.wvenv\\lib\\site-packages (from pandas) (2024.2)\n",
-      "Requirement already satisfied: numpy>=1.22.4 in c:\\users\\sebas\\documents\\clouddrive\\uni\\ws24\\research project\\gams\\python\\.wvenv\\lib\\site-packages (from pandas) (2.0.2)\n",
-      "Requirement already satisfied: python-dateutil>=2.8.2 in c:\\users\\sebas\\documents\\clouddrive\\uni\\ws24\\research project\\gams\\python\\.wvenv\\lib\\site-packages (from pandas) (2.9.0.post0)\n",
-      "Requirement already satisfied: six>=1.5 in c:\\users\\sebas\\documents\\clouddrive\\uni\\ws24\\research project\\gams\\python\\.wvenv\\lib\\site-packages (from python-dateutil>=2.8.2->pandas) (1.17.0)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING: You are using pip version 21.1.1; however, version 24.3.1 is available.\n",
-      "You should consider upgrading via the 'c:\\Users\\sebas\\Documents\\CloudDrive\\Uni\\WS24\\Research Project\\gams\\python\\.wvenv\\Scripts\\python.exe -m pip install --upgrade pip' command.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: matplotlib in c:\\users\\sebas\\documents\\clouddrive\\uni\\ws24\\research project\\gams\\python\\.wvenv\\lib\\site-packages (3.9.4)\n",
-      "Requirement already satisfied: fonttools>=4.22.0 in c:\\users\\sebas\\documents\\clouddrive\\uni\\ws24\\research project\\gams\\python\\.wvenv\\lib\\site-packages (from matplotlib) (4.55.3)\n",
-      "Requirement already satisfied: python-dateutil>=2.7 in c:\\users\\sebas\\documents\\clouddrive\\uni\\ws24\\research project\\gams\\python\\.wvenv\\lib\\site-packages (from matplotlib) (2.9.0.post0)\n",
-      "Requirement already satisfied: importlib-resources>=3.2.0 in c:\\users\\sebas\\documents\\clouddrive\\uni\\ws24\\research project\\gams\\python\\.wvenv\\lib\\site-packages (from matplotlib) (6.5.2)\n",
-      "Requirement already satisfied: contourpy>=1.0.1 in c:\\users\\sebas\\documents\\clouddrive\\uni\\ws24\\research project\\gams\\python\\.wvenv\\lib\\site-packages (from matplotlib) (1.3.0)\n",
-      "Requirement already satisfied: numpy>=1.23 in c:\\users\\sebas\\documents\\clouddrive\\uni\\ws24\\research project\\gams\\python\\.wvenv\\lib\\site-packages (from matplotlib) (2.0.2)\n",
-      "Requirement already satisfied: pyparsing>=2.3.1 in c:\\users\\sebas\\documents\\clouddrive\\uni\\ws24\\research project\\gams\\python\\.wvenv\\lib\\site-packages (from matplotlib) (3.2.1)\n",
-      "Requirement already satisfied: packaging>=20.0 in c:\\users\\sebas\\documents\\clouddrive\\uni\\ws24\\research project\\gams\\python\\.wvenv\\lib\\site-packages (from matplotlib) (24.2)\n",
-      "Requirement already satisfied: pillow>=8 in c:\\users\\sebas\\documents\\clouddrive\\uni\\ws24\\research project\\gams\\python\\.wvenv\\lib\\site-packages (from matplotlib) (11.1.0)\n",
-      "Requirement already satisfied: cycler>=0.10 in c:\\users\\sebas\\documents\\clouddrive\\uni\\ws24\\research project\\gams\\python\\.wvenv\\lib\\site-packages (from matplotlib) (0.12.1)\n",
-      "Requirement already satisfied: kiwisolver>=1.3.1 in c:\\users\\sebas\\documents\\clouddrive\\uni\\ws24\\research project\\gams\\python\\.wvenv\\lib\\site-packages (from matplotlib) (1.4.7)\n",
-      "Requirement already satisfied: zipp>=3.1.0 in c:\\users\\sebas\\documents\\clouddrive\\uni\\ws24\\research project\\gams\\python\\.wvenv\\lib\\site-packages (from importlib-resources>=3.2.0->matplotlib) (3.21.0)\n",
-      "Requirement already satisfied: six>=1.5 in c:\\users\\sebas\\documents\\clouddrive\\uni\\ws24\\research project\\gams\\python\\.wvenv\\lib\\site-packages (from python-dateutil>=2.7->matplotlib) (1.17.0)\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING: You are using pip version 21.1.1; however, version 24.3.1 is available.\n",
-      "You should consider upgrading via the 'c:\\Users\\sebas\\Documents\\CloudDrive\\Uni\\WS24\\Research Project\\gams\\python\\.wvenv\\Scripts\\python.exe -m pip install --upgrade pip' command.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: openpyxl in c:\\users\\sebas\\documents\\clouddrive\\uni\\ws24\\research project\\gams\\python\\.wvenv\\lib\\site-packages (3.1.5)\n",
-      "Requirement already satisfied: et-xmlfile in c:\\users\\sebas\\documents\\clouddrive\\uni\\ws24\\research project\\gams\\python\\.wvenv\\lib\\site-packages (from openpyxl) (2.0.0)\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING: You are using pip version 21.1.1; however, version 24.3.1 is available.\n",
-      "You should consider upgrading via the 'c:\\Users\\sebas\\Documents\\CloudDrive\\Uni\\WS24\\Research Project\\gams\\python\\.wvenv\\Scripts\\python.exe -m pip install --upgrade pip' command.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: statsmodels in c:\\users\\sebas\\documents\\clouddrive\\uni\\ws24\\research project\\gams\\python\\.wvenv\\lib\\site-packages (0.14.4)Note: you may need to restart the kernel to use updated packages.\n",
-      "\n",
-      "Requirement already satisfied: packaging>=21.3 in c:\\users\\sebas\\documents\\clouddrive\\uni\\ws24\\research project\\gams\\python\\.wvenv\\lib\\site-packages (from statsmodels) (24.2)\n",
-      "Requirement already satisfied: scipy!=1.9.2,>=1.8 in c:\\users\\sebas\\documents\\clouddrive\\uni\\ws24\\research project\\gams\\python\\.wvenv\\lib\\site-packages (from statsmodels) (1.13.1)\n",
-      "Requirement already satisfied: patsy>=0.5.6 in c:\\users\\sebas\\documents\\clouddrive\\uni\\ws24\\research project\\gams\\python\\.wvenv\\lib\\site-packages (from statsmodels) (1.0.1)\n",
-      "Requirement already satisfied: numpy<3,>=1.22.3 in c:\\users\\sebas\\documents\\clouddrive\\uni\\ws24\\research project\\gams\\python\\.wvenv\\lib\\site-packages (from statsmodels) (2.0.2)\n",
-      "Requirement already satisfied: pandas!=2.1.0,>=1.4 in c:\\users\\sebas\\documents\\clouddrive\\uni\\ws24\\research project\\gams\\python\\.wvenv\\lib\\site-packages (from statsmodels) (2.2.3)\n",
-      "Requirement already satisfied: pytz>=2020.1 in c:\\users\\sebas\\documents\\clouddrive\\uni\\ws24\\research project\\gams\\python\\.wvenv\\lib\\site-packages (from pandas!=2.1.0,>=1.4->statsmodels) (2024.2)\n",
-      "Requirement already satisfied: python-dateutil>=2.8.2 in c:\\users\\sebas\\documents\\clouddrive\\uni\\ws24\\research project\\gams\\python\\.wvenv\\lib\\site-packages (from pandas!=2.1.0,>=1.4->statsmodels) (2.9.0.post0)\n",
-      "Requirement already satisfied: tzdata>=2022.7 in c:\\users\\sebas\\documents\\clouddrive\\uni\\ws24\\research project\\gams\\python\\.wvenv\\lib\\site-packages (from pandas!=2.1.0,>=1.4->statsmodels) (2024.2)\n",
-      "Requirement already satisfied: six>=1.5 in c:\\users\\sebas\\documents\\clouddrive\\uni\\ws24\\research project\\gams\\python\\.wvenv\\lib\\site-packages (from python-dateutil>=2.8.2->pandas!=2.1.0,>=1.4->statsmodels) (1.17.0)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING: You are using pip version 21.1.1; however, version 24.3.1 is available.\n",
-      "You should consider upgrading via the 'c:\\Users\\sebas\\Documents\\CloudDrive\\Uni\\WS24\\Research Project\\gams\\python\\.wvenv\\Scripts\\python.exe -m pip install --upgrade pip' command.\n"
-     ]
-    }
-   ],
-   "source": [
-    "%pip install pandas\n",
-    "%pip install matplotlib\n",
-    "%pip install openpyxl\n",
-    "%pip install statsmodels"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -2442,7 +2338,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".wvenv",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -2456,7 +2352,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
